<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_default_mode"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="search_mode"
            android:title="@string/settings_default_mode"
            android:summary="%s"
            android:entries="@array/search_mode_entries"
            android:entryValues="@array/search_mode_values"
            android:defaultValue="medium" />

        <SwitchPreference
            android:key="synonym_enabled"
            android:title="@string/settings_synonym"
            android:summary="@string/settings_synonym_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_file_types"
        app:iconSpaceReserved="false">

        <MultiSelectListPreference
            android:key="file_types"
            android:title="@string/settings_file_types"
            android:summary="@string/settings_file_types"
            android:entries="@array/file_type_entries"
            android:entryValues="@array/file_type_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_char_limit"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="char_limit"
            android:title="@string/settings_char_limit"
            android:summary="%s"
            android:entries="@array/char_limit_entries"
            android:entryValues="@array/char_limit_values"
            android:defaultValue="1000000" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_scope"
        app:iconSpaceReserved="false">

        <Preference
            android:key="add_folder"
            android:title="@string/add_folder" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_index_ops"
        app:iconSpaceReserved="false">

        <Preference
            android:key="trigger_index"
            android:title="@string/trigger_index" />

        <Preference
            android:key="delete_index"
            android:title="@string/delete_index" />

        <Preference
            android:key="scan_history"
            android:title="@string/scan_history" />

        <Preference
            android:key="clear_history"
            android:title="@string/clear_history" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about"
        app:iconSpaceReserved="false">

        <Preference
            android:key="about_version"
            android:title="@string/about"
            android:summary="@string/version" />

    </PreferenceCategory>

</PreferenceScreen>
