<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_index"
        android:icon="@drawable/ic_index"
        android:title="@string/btn_index_now"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_scan_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_index_progress"
        android:title="@string/indexing_progress"
        app:actionLayout="@layout/toolbar_index_progress"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings"
        app:showAsAction="ifRoom" />
</menu>
